4/03/25 6:10: Beginning work on 1.06
4/03/25 6:10: Added class monsterinfo
4/03/25 6:30: working on parse method
4/04/25 4:40: monster_desc.txt in .rlg327 dir