@@ -1,8 +1,8 @@
-This project ports the Roguelike game from C to C++, introducing object-oriented design with pc and npc classes inheriting from character. 
-The game now features a Fog of War system where the PC sees and remembers terrain within a light radius of 3, but monsters are only visible when illuminated. 
-Debugging commands include toggling fog (f) and teleporting (g), allowing the PC to move instantly to a selected or random location. 
-The makefile has been updated for C++ compilation, and rendering now supports visible and remembered terrain.
+This part of the Roguelike project implements a C++ parser for monster description files used in a Roguelike game. Each monster is defined in a text file located 
+at $HOME/.rlg327/monster_desc.txt, using a simple custom format that includes fields like name, description, symbol, color, speed, hitpoints, 
+damage, abilities, and rarity. The parser reads and validates each monster entry between BEGIN MONSTER and END tags, ignoring any bad or 
+incomplete entries. Parsed monsters are printed in the terminal
 
 
 For TA:
-    It works correctly, but if ran in valgrind, it throws memory errors
+    It works 
