@@ -1,4 +1,9 @@
 4/03/25 6:10: Beginning work on 1.06
 4/03/25 6:10: Added class monsterinfo
-4/03/25 6:30: working on parse method
+4/03/25 6:30: working on parse method ideas
 4/04/25 4:40: monster_desc.txt in .rlg327 dir
+4/05/25 1:55: began parse() method
+4/05/25 2:25: began other helper parse methods
+4/06/25 6:00: parsing finished
+4/07/25 12:05: finishing up readme and turn in
+
